# tinyML

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: github-cicd.yaml
author/: index.html
changelog/: index.html
config/: logging.dev.init  logging.prod.init
docs/: author.md  changelog.md  index.md  license.md  motivation.md  reference.md
explanation/: index.html
how-to-guides/: index.html
license/: index.html
motivation/: index.html
reference/: index.html
scripts/cicd/setup/: install_poetry.sh  read_poetry_version.sh  read_python_version.sh
search/: search_index.json
src/instant_repo/: __init__.py  app.py  mkdocstrings_example.py
src/instant_repo/commons/: __init__.py
src/tinyML/: __init__.py  app.py  mkdocstrings_example.py
src/tinyML/classifiers/: __init__.py
src/tinyML/commons/: __init__.py  logging_setup.py  metrics.py  utils.py
src/tinyML/ensembles/: __init__.py  base.py  decision_tree.py
src/tinyML/regressors/: __init__.py  base.py  linear_regression.py  logistic_regression.py
tests/: conftest.py
tests/integration/: test_classifiers.py  test_ensembles.py  test_regressors.py
tests/unit/: test_metrics.py
tutorials/: index.html
